firstest at homework

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,22 @@ body {
   --hover-color: #404bbf;
 }
 
+.container {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  outline: 2px solid tomato;
+}
+
+.second-container {
+  width: 1440px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  outline: 2px solid blue;
+}
+
 .list {
   list-style: none;
 }
@@ -106,6 +122,8 @@ body {
   color: var(--background-color);
   cursor: pointer;
   background-color: var(--logo-color);
+  padding: 16px 32px;
+  margin-top: 48px;
 }
 
 .hero-btn:is(:hover, :focus) {
