--- a/css/styles.css
+++ b/css/styles.css
@@ -23,14 +23,6 @@ body {
   outline: 2px solid tomato;
 }
 
-.second-container {
-  width: 1440px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
-  outline: 2px solid blue;
-}
-
 .list {
   list-style: none;
 }
@@ -84,6 +76,7 @@ body {
 }
 
 .header-address-list {
+  margin: 0 auto;
 }
 
 .header-address-item {
@@ -97,13 +90,15 @@ body {
   color: var(--hover-color);
 }
 
-/*------------- Main 1 section------------- */
+/*------------- Hero ------------- */
 
 .hero {
   background-color: var(--title-color);
 }
 
 .hero-title {
+  margin-top: 0;
+  margin-bottom: 48px;
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
@@ -124,6 +119,7 @@ body {
   background-color: var(--logo-color);
   padding: 16px 32px;
   margin-top: 48px;
+  border-radius: 4px;
 }
 
 .hero-btn:is(:hover, :focus) {
@@ -137,6 +133,8 @@ body {
 }
 
 .skills-list {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .skills-list-item {
@@ -148,6 +146,8 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--title-color);
+  margin-top: 0;
+  margin-bottom: 8px;
 }
 
 .item-text {
@@ -155,6 +155,8 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--text-color);
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 /*------------- Main 3 section------------- */
@@ -168,9 +170,13 @@ body {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--title-color);
+  margin-top: 0;
+  margin-bottom: 72px;
 }
 
 .images-list {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .images-item {
@@ -187,9 +193,13 @@ body {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--title-color);
+  margin-top: 0;
+  margin-bottom: 72px;
 }
 .team-list {
   background-color: var(--background-color);
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .team-list-item {
   background-color: var(--background-color);
