--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,13 @@ body {
   background-color: var(--background-color);
 }
 
+.header-container {
+  display: flex;
+}
+
 .header-navigation {
+  display: flex;
+  align-items: center;
 }
 
 .header-logo {
@@ -50,6 +56,7 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--logo-color);
+  margin-right: 76px;
 }
 
 .logo-word {
@@ -57,6 +64,9 @@ body {
 }
 
 .header-list {
+  display: flex;
+  gap: 40px;
+  margin-right: auto;
 }
 
 .header-list-item {
@@ -76,7 +86,11 @@ body {
 }
 
 .header-address-list {
-  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  margin-left: 250px;
+  margin-right: 0;
 }
 
 .header-address-item {
