--- a/css/styles.css
+++ b/css/styles.css
@@ -15,12 +15,15 @@ body {
   --hover-color: #404bbf;
 }
 
+img {
+  display: block;
+}
+
 .container {
   width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  outline: 2px solid tomato;
 }
 
 .list {
@@ -34,6 +37,7 @@ body {
 /*------------- Header------------- */
 .header {
   background-color: var(--background-color);
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .header-container {
@@ -98,6 +102,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--text-color);
+  padding: 24px 0;
 }
 
 .header-address-item:is(:hover, :focus) {
@@ -108,6 +113,7 @@ body {
 
 .hero {
   background-color: var(--title-color);
+  padding: 188px 0;
 }
 
 .hero-title {
@@ -118,6 +124,9 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--background-color);
+  max-width: 496px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hero-btn {
@@ -132,8 +141,13 @@ body {
   cursor: pointer;
   background-color: var(--logo-color);
   padding: 16px 32px;
-  margin-top: 48px;
+  margin: 48px auto 0 auto;
   border-radius: 4px;
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .hero-btn:is(:hover, :focus) {
@@ -144,14 +158,19 @@ body {
 /*------------- Main 2 section------------- */
 
 .skills {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .skills-list {
   margin-top: 0;
   margin-bottom: 0;
+  display: flex;
+  gap: 24px;
 }
 
 .skills-list-item {
+  width: calc((100% - 72px) / 4);
 }
 
 .item-title {
