--- a/css/styles.css
+++ b/css/styles.css
@@ -223,6 +223,8 @@ img {
 /*------------- Main 4 section------------- */
 .team {
   background-color: var(--footer-text);
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 .team-title {
   font-size: 36px;
@@ -235,12 +237,18 @@ img {
   margin-bottom: 72px;
 }
 .team-list {
-  background-color: var(--background-color);
+  /* background-color: var(--background-color); */
   margin-top: 0;
   margin-bottom: 0;
+  display: flex;
+  gap: 24px;
 }
 .team-list-item {
   background-color: var(--background-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  flex-basis: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
 }
 .item-title {
   font-weight: 500;
@@ -256,6 +264,10 @@ img {
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--text-color);
+}
+
+.text-container {
+  padding: 32px 16px;
 }
 
 /*------------- Footer------------- */
