--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,10 @@ img {
   flex-basis: calc((100% - 72px) / 4);
 }
 
+.second-class {
+  width: calc((100% - 72px) / 4);
+}
+
 .item-title {
   font-weight: 500;
   font-size: 20px;
