--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@ img {
 }
 
 .header-list-item {
+  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -101,6 +102,7 @@ img {
 }
 
 .header-address-item {
+  display: block;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -270,6 +272,7 @@ img {
 
 .text-container {
   padding: 32px 16px;
+  text-align: center;
 }
 
 /*------------- Footer------------- */
@@ -293,6 +296,7 @@ img {
   letter-spacing: 0.02em;
   color: var(--footer-text);
   max-width: 264px;
+  margin: 0;
 }
 
 /*------------- Portfolio------------- */
@@ -349,7 +353,7 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--title-color);
-  margin-bottom: 8px;
+  margin: 0 0 8px 0;
 }
 
 .second-list-text {
@@ -357,6 +361,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--text-color);
+  margin: 0;
 }
 
 .application {
