--- a/css/styles.css
+++ b/css/styles.css
@@ -20,11 +20,14 @@ img {
 }
 
 .visually-hidden {
-  position: absolute;
-  left: -9999px;
-  width: 1px;
-  height: 1px;
+  position: absolute !important;
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
   overflow: hidden;
+  white-space: nowrap;
 }
 
 .container {
