--- a/css/styles.css
+++ b/css/styles.css
@@ -20,14 +20,16 @@ img {
 }
 
 .visually-hidden {
-  position: absolute !important;
-  clip: rect(1px, 1px, 1px, 1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
-  overflow: hidden;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
   white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .container {
@@ -102,13 +104,14 @@ img {
 
 .header-address {
   font-style: normal;
+  margin-left: auto;
 }
 
 .header-address-list {
   display: flex;
   align-items: center;
   gap: 40px;
-  margin-left: 250px;
+  margin-left: 0;
   margin-right: 0;
 }
 
